# matmul-bench

./: LICENSE
docs/: presentation.md  references.bib
docs/essay/: essay.docx
julia/: Manifest.toml  Project.toml  README.md  benchmark.jl  classic_matmul.jl  divide_conquer_matmul.jl  iterative_matmul.jl  main.jl  strassen_matmul.jl  test.jl
plot/: README.md  compare_benchmarks.py  requirements.txt
results/: julia_benchmark_Linux_x86_64_8t_1768160643.csv  julia_benchmark_linux_x86_64_8t_1768164415.csv  julia_benchmark_linux_x86_64_8t_1768517394.csv  rust_benchmark_linux_x86_64_8t_1768164515.csv  rust_benchmark_linux_x86_64_8t_1768522854.csv
results/data/: julia_benchmark_linux_x86_64_8t_1768850376.csv  rust_benchmark_linux_x86_64_8t_1768850432.csv
rust/: Cargo.toml  README.md
rust/src/: benchmark.rs  classic_matmul.rs  divide_conquer_matmul.rs  iterative_matmul.rs  main.rs  matrix.rs  strassen_matmul.rs  test.rs
