[package]
name = "matmul-bench"
version = "0.1.0"
edition = "2021"
authors = ["nkusla"]
default-run = "matmul-bench"

[[bin]]
name = "matmul-bench"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[dependencies]
rayon = "1.10"
rand = "0.8"
stats_alloc = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
